unpackaged/main/default/objects/SharePointObj__c/SharePointObj__c.object-meta.xml
<CustomObject>
    <label>SharePointObj</label>
    <nameField>
        <label>Nombre de SharePointObj</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SharePointObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>