unpackaged/main/default/objects/SharePointObj__c/fields/Accion__c.field-meta.xml
<CustomField>
    <fullName>Accion__c</fullName>
    <label>Accion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>