unpackaged/main/default/objects/SharePointObj__c/fields/approverEmpId__c.field-meta.xml
<CustomField>
    <fullName>approverEmpId__c</fullName>
    <label>approverEmpId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>