unpackaged/main/default/objects/SharePointObj__c/fields/Aprobacion_URL__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_URL__c</fullName>
    <label>Aprobación</label>
    <type>Url</type>
</CustomField>