unpackaged/main/default/objects/SharePointObj__c/fields/ApSatic__c.field-meta.xml
<CustomField>
    <fullName>ApSatic__c</fullName>
    <label>ApSatic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>