unpackaged/main/default/objects/SharePointObj__c/fields/CentroCosto__c.field-meta.xml
<CustomField>
    <fullName>CentroCosto__c</fullName>
    <label>CentroCosto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>