unpackaged/main/default/objects/SharePointObj__c/fields/CompaniasKontrol__c.field-meta.xml
<CustomField>
    <fullName>CompaniasKontrol__c</fullName>
    <label>CompaniasKontrol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>