unpackaged/main/default/objects/SharePointObj__c/fields/ContactoVendedor__c.field-meta.xml
<CustomField>
    <fullName>ContactoVendedor__c</fullName>
    <label>ContactoVendedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>