unpackaged/main/default/objects/SharePointObj__c/fields/Contratante__c.field-meta.xml
<CustomField>
    <fullName>Contratante__c</fullName>
    <label>Contratante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>