unpackaged/main/default/objects/SharePointObj__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <label>Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>