unpackaged/main/default/objects/SharePointObj__c/fields/FechaFirmaContrato__c.field-meta.xml
<CustomField>
    <fullName>FechaFirmaContrato__c</fullName>
    <label>FechaFirmaContrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>