unpackaged/main/default/objects/SharePointObj__c/fields/FechaInicioObra__c.field-meta.xml
<CustomField>
    <fullName>FechaInicioObra__c</fullName>
    <label>FechaInicioObra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>