unpackaged/main/default/objects/SharePointObj__c/fields/FechaTerminoObra__c.field-meta.xml
<CustomField>
    <fullName>FechaTerminoObra__c</fullName>
    <label>FechaTerminoObra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>