unpackaged/main/default/objects/SharePointObj__c/fields/FHR__c.field-meta.xml
<CustomField>
    <fullName>FHR__c</fullName>
    <label>Fecha / Hora de Resolución</label>
    <type>DateTime</type>
</CustomField>