unpackaged/main/default/objects/SharePointObj__c/fields/FondoGarantiaDias__c.field-meta.xml
<CustomField>
    <fullName>FondoGarantiaDias__c</fullName>
    <label>FondoGarantiaDias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>