unpackaged/main/default/objects/SharePointObj__c/fields/FondoGarantiaPorciento__c.field-meta.xml
<CustomField>
    <fullName>FondoGarantiaPorciento__c</fullName>
    <label>FondoGarantiaPorciento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>