unpackaged/main/default/objects/SharePointObj__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <label>Fraccionamiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>