unpackaged/main/default/objects/SharePointObj__c/fields/ImporteAccesorios__c.field-meta.xml
<CustomField>
    <fullName>ImporteAccesorios__c</fullName>
    <label>ImporteAccesorios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>