unpackaged/main/default/objects/SharePointObj__c/fields/ImporteAnticipo__c.field-meta.xml
<CustomField>
    <fullName>ImporteAnticipo__c</fullName>
    <label>ImporteAnticipo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>