unpackaged/main/default/objects/SharePointObj__c/fields/ImporteContrato__c.field-meta.xml
<CustomField>
    <fullName>ImporteContrato__c</fullName>
    <label>ImporteContrato</label>
    <length>50</length>
    <type>Text</type>
</CustomField>