unpackaged/main/default/objects/SharePointObj__c/fields/ImporteMolde__c.field-meta.xml
<CustomField>
    <fullName>ImporteMolde__c</fullName>
    <label>ImporteMolde</label>
    <length>50</length>
    <type>Text</type>
</CustomField>