unpackaged/main/default/objects/SharePointObj__c/fields/LineaProductos__c.field-meta.xml
<CustomField>
    <fullName>LineaProductos__c</fullName>
    <label>LineaProductos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>