unpackaged/main/default/objects/SharePointObj__c/fields/Listas__c.field-meta.xml
<CustomField>
    <fullName>Listas__c</fullName>
    <label>Listas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>