unpackaged/main/default/objects/SharePointObj__c/fields/NoDocumento__c.field-meta.xml
<CustomField>
    <fullName>NoDocumento__c</fullName>
    <label>NoDocumento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>