unpackaged/main/default/objects/SharePointObj__c/fields/Obraoadmin__c.field-meta.xml
<CustomField>
    <fullName>Obraoadmin__c</fullName>
    <label>Obraoadmin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>