unpackaged/main/default/objects/SharePointObj__c/fields/platform__c.field-meta.xml
<CustomField>
    <fullName>platform__c</fullName>
    <label>platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>