unpackaged/main/default/objects/SharePointObj__c/fields/RazonSocialNombre__c.field-meta.xml
<CustomField>
    <fullName>RazonSocialNombre__c</fullName>
    <label>RazonSocialNombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>