unpackaged/main/default/objects/SharePointObj__c/fields/Respuesta_Larga_SharePoint__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Larga_SharePoint__c</fullName>
    <label>Respuesta_Larga_SharePoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>