unpackaged/main/default/objects/SharePointObj__c/fields/Rfc__c.field-meta.xml
<CustomField>
    <fullName>Rfc__c</fullName>
    <label>Rfc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>