unpackaged/main/default/objects/SharePointObj__c/fields/Static__c.field-meta.xml
<CustomField>
    <fullName>Static__c</fullName>
    <label>Static</label>
    <length>255</length>
    <type>Text</type>
</CustomField>