unpackaged/main/default/objects/SharePointObj__c/fields/SubCategoria__c.field-meta.xml
<CustomField>
    <fullName>SubCategoria__c</fullName>
    <label>SubCategoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>