unpackaged/main/default/objects/SharePointObj__c/fields/Suministro__c.field-meta.xml
<CustomField>
    <fullName>Suministro__c</fullName>
    <label>Suministro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>