unpackaged/main/default/objects/SharePointObj__c/fields/Suplente__c.field-meta.xml
<CustomField>
    <fullName>Suplente__c</fullName>
    <label>Suplente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>