unpackaged/main/default/objects/SharePointObj__c/fields/testigo_1__c.field-meta.xml
<CustomField>
    <fullName>testigo_1__c</fullName>
    <label>testigo_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>