unpackaged/main/default/objects/SharePointObj__c/fields/testigo_2__c.field-meta.xml
<CustomField>
    <fullName>testigo_2__c</fullName>
    <label>testigo_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>