unpackaged/main/default/objects/SharePointObj__c/fields/testigo_3__c.field-meta.xml
<CustomField>
    <fullName>testigo_3__c</fullName>
    <label>testigo_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>