unpackaged/main/default/objects/SharePointObj__c/fields/TipoInsumo__c.field-meta.xml
<CustomField>
    <fullName>TipoInsumo__c</fullName>
    <label>TipoInsumo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>