unpackaged/main/default/objects/SharePointObj__c/fields/Tramite__c.field-meta.xml
<CustomField>
    <fullName>Tramite__c</fullName>
    <label>Tramite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>