unpackaged/main/default/objects/SharePointObj__c/fields/UsuarioJefeInmediato__c.field-meta.xml
<CustomField>
    <fullName>UsuarioJefeInmediato__c</fullName>
    <label>UsuarioJefeInmediato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>